Atualizações no layout responsivo

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   </div>
   <div class="section--home" id="home">
-    <div class="img--barbudo">
+    <div class="img--barbudo .hide-mobile">
       <img src="./src/assets/images/homemDeBarba.png" alt="" srcset="">
     </div>
 
