reatualização layout resposibilidade

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="./src/assets/images/Logo-branco-sem-fundo-AI.png" />
   <link rel="stylesheet" href="./src/assets/styles/styles.css">
+  <link rel="stylesheet" href="./src/assets/styles/responsivo.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_drop_down" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
 
   <title>Mr Dyllan Barbearia</title>
 </head>
@@ -23,15 +23,7 @@
     <div class="links--menu">
       <a href="#home">INÍCIO</a>
       <a href="#information">SOBRE NÓS</a>
-      <a href="#">PAGES
-        <span class="material-symbols-outlined">
-          arrow_drop_down
-        </span>
-      </a>
-
       <a href="#">CONTATOS</a>
-
-
     </div>
 
     <div class="agendamento">
@@ -40,7 +32,7 @@
 
   </div>
   <div class="section--home" id="home">
-    <div class="img--barbudo .hide-mobile">
+    <div class="img--barbudo">
       <img src="./src/assets/images/homemDeBarba.png" alt="" srcset="">
     </div>
 
