text decoration number removed

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
 
       <div class="information--service--section">
-        <p class="number--contact">+55 (066) 9 84519856</p>
+        <a class="number--contact">+55 (066) 9 84519856</a>
         <h2>horário de atendimentos</h2>
         <div class="line"></div>
         <div class="day--hors">
