alteração de imgs do format png e jpeg for svg

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
   <div class="section--home" id="home">
     <div class="img--barbudo">
-      <img src="./src/assets/images/homemDeBarba.png" alt="" srcset="">
+      <img src="./src/assets/images/homemDeBarba 1.svg" alt="" srcset="">
     </div>
 
     <div class="informations">
@@ -48,10 +48,10 @@
 
     <div class="container--img">
       <div class="img--left">
-        <img src="./src/assets/images/close-up-man-getting-haircut-salon.jpg" alt="" srcset="">
+        <img src="./src/assets/images/imagem2.svg" alt="" srcset="">
       </div>
       <div class="img--right">
-        <img src="./src/assets/images/anonymous-barber-trimming-beard-man.jpg" alt="" srcset="">
+        <img src="./src/assets/images/imagem1.svg" alt="" srcset="">
       </div>
 
 
@@ -84,7 +84,7 @@
     </div>
 
   </div>
-  
+
   <div class="section--nossa--historia">
     <h2 class="titulo--section--nossa--historia">Nossa História</h2>
 
@@ -103,7 +103,7 @@
       </div>
 
       <div class="section--nossa--historia--img">
-        <img src="./src/assets/images/anonymous-barber-trimming-beard-man.jpg" alt="" srcset="">
+        <img src="./src/assets/images/imagem1.svg" alt="" srcset="">
       </div>
     </div>
 
@@ -122,7 +122,7 @@
     <h2 class="services--title">Serviços de barbearia</h2>
     <div class="conteiner--imgs-icons">
       <div class="conteiner--img">
-        <img src="./src/assets/images/close-up-man-getting-haircut-salon.jpg" alt="">
+        <img src="./src/assets/images/imagem1.svg" alt="">
       </div>
       <div class="conteiner--grids">
         <div class="grids--items">
